// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

option go_package = "github.com/rotemtam/ent-grpc-example/ent/proto/entpb";

message Category {
  int64 id = 1;

  string name = 2;

  User admin = 3;
}

message Group {
  int64 id = 1;

  string name = 2;

  User admin = 3;
}

message CreateGroupRequest {
  Group group = 1;
}

message GetGroupRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateGroupRequest {
  Group group = 1;
}

message DeleteGroupRequest {
  int64 id = 1;
}

message ListGroupRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListGroupResponse {
  repeated Group group_list = 1;

  string next_page_token = 2;
}

message BatchCreateGroupsRequest {
  repeated CreateGroupRequest requests = 1;
}

message BatchCreateGroupsResponse {
  repeated Group groups = 1;
}

message User {
  int64 id = 1;

  string username = 2;

  string first_name = 3;

  string last_name = 4;

  string email = 5;

  repeated Group admin_of = 6;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message ListUserRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserResponse {
  repeated User user_list = 1;

  string next_page_token = 2;
}

message BatchCreateUsersRequest {
  repeated CreateUserRequest requests = 1;
}

message BatchCreateUsersResponse {
  repeated User users = 1;
}

service GroupService {
  rpc Create ( CreateGroupRequest ) returns ( Group );

  rpc Get ( GetGroupRequest ) returns ( Group );

  rpc Update ( UpdateGroupRequest ) returns ( Group );

  rpc Delete ( DeleteGroupRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListGroupRequest ) returns ( ListGroupResponse );

  rpc BatchCreate ( BatchCreateGroupsRequest ) returns ( BatchCreateGroupsResponse );
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserRequest ) returns ( ListUserResponse );

  rpc BatchCreate ( BatchCreateUsersRequest ) returns ( BatchCreateUsersResponse );
}
